--- a/Shield/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Shield/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_friends"
+        android:icon="@drawable/ic_baseline_group_24"
+        android:title="@string/title_friends" />
+
+
+    <item
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/ic_baseline_bluetooth_24"
+        android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_notifications"
