--- a/Shield/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Shield/app/src/main/res/navigation/mobile_navigation.xml
@@ -6,16 +6,16 @@
     app:startDestination="@+id/navigation_home">
 
     <fragment
+        android:id="@+id/navigation_friends"
+        android:name="com.nova.android.shield.ui.main.tabs.friends.FriendsFragment"
+        android:label="@string/title_friends"
+        tools:layout="@layout/fragment_friends" />
+
+    <fragment
         android:id="@+id/navigation_home"
         android:name="com.nova.android.shield.ui.main.tabs.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
-
-    <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.nova.android.shield.ui.main.tabs.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
