--- a/Shield/app/src/main/res/layout/activity_main.xml
+++ b/Shield/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
 
 
         <Button
-            android:id="@+id/shieldLoaderTextViewRetry"
+            android:id="@+id/startShieldingBtn"
             style="@style/buttonStyleInverted"
             android:layout_below="@+id/broadcastAnimationHolder"
             android:layout_centerHorizontal="true"
