--- a/Shield/app/src/main/res/layout/fragment_home.xml
+++ b/Shield/app/src/main/res/layout/fragment_home.xml
@@ -1,58 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingTop="?attr/actionBarSize"
+    android:paddingBottom="?attr/actionBarSize"
     android:background="@color/colorAccent"
     tools:context=".ui.main.tabs.home.HomeFragment">
 
     <LinearLayout
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBaseline_toTopOf="@id/linearLayout2"
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/shieldLoaderAnimation"
             android:layout_width="550sp"
             android:layout_height="550sp"
             android:layout_gravity="center"
+            android:visibility="visible"
             android:src="@drawable/il_shieldanim_avatar_1" />
-
-
-        <Button
-            android:id="@+id/shieldLoaderTextViewRetry"
-            style="@style/buttonStyleInverted"
-            android:layout_below="@+id/broadcastAnimationHolder"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="15dp"
-            android:padding="12dp"
-            android:text="@string/shield_loader_text_retry"
-            android:visibility="visible" />
-
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:gravity="end">
 
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <TextView
-            android:gravity="bottom"
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabStartShielding"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_marginBottom="1dp"
-            android:textColor="@color/colorPrimaryDark"
-            android:text="@string/powered_by"/>
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:focusable="true"
+            android:src="@drawable/ic_baseline_play_arrow_24"
+            android:tintMode="@color/white"
+            android:layout_gravity="bottom"
+            />
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
