--- a/Shield/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Shield/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,8 +14,8 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_alerts"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:title="@string/title_alerts" />
 
 </menu>
