--- a/Shield/app/src/main/res/values/style.xml
+++ b/Shield/app/src/main/res/values/style.xml
@@ -39,11 +39,11 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
-<!--    <style name="MenuButtonsSmallGreen">-->
-<!--        <item name="fab_colorNormal">@color/colorPrimary</item>-->
-<!--        <item name="fab_colorPressed">@color/colorPrimaryDark</item>-->
-<!--        <item name="fab_colorRipple">@color/colorPrimary</item>-->
-<!--    </style>-->
+    <style name="MenuButtonsSmallBlue">
+        <item name="fab_colorNormal">@color/colorPrimary</item>
+        <item name="fab_colorPressed">@color/colorPrimaryDark</item>
+        <item name="fab_colorRipple">@color/colorPrimary</item>
+    </style>
 
     <style name="BasicEditText">
         <item name="android:cursorVisible">true</item>
