--- a/Shield/app/src/main/res/layout/fragment_friends.xml
+++ b/Shield/app/src/main/res/layout/fragment_friends.xml
@@ -27,6 +27,7 @@
             android:visibility="gone" />
 
         <TextView
+            android:id="@+id/addFriendsDescription"
             android:paddingTop="25sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
