--- a/Shield/app/src/main/res/layout/fragment_home.xml
+++ b/Shield/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
         android:gravity="end">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabStartShielding"
+            android:id="@+id/shieldingSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
