--- a/Shield/app/src/main/res/layout/fragment_home.xml
+++ b/Shield/app/src/main/res/layout/fragment_home.xml
@@ -33,17 +33,19 @@
         android:layout_height="match_parent"
         android:gravity="end">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <com.github.clans.fab.FloatingActionButton
             android:id="@+id/shieldingSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:focusable="true"
+            android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="11dp"
             android:src="@drawable/ic_baseline_play_arrow_24"
-            android:tintMode="@color/white"
-            android:layout_gravity="bottom"
-            />
+            android:visibility="visible"
+            app:fab_hideAnimation="@anim/fab_slide_out_to_right"
+            app:fab_showAnimation="@anim/fab_slide_in_from_right"
+            app:fab_colorNormal="@color/colorPrimary"
+            app:fab_colorPressed="@color/colorPrimaryDark"/>
 
     </LinearLayout>
 
