--- a/Shield/app/src/main/res/layout/activity_signup.xml
+++ b/Shield/app/src/main/res/layout/activity_signup.xml
@@ -118,19 +118,30 @@
         android:gravity="center"
         android:orientation="vertical"
         >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@string/from"/>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="16sp"-->
+<!--            android:text="@string/from"/>-->
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary"
-            android:text="@string/spaced_shield"/>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="16sp"-->
+<!--            android:textStyle="bold"-->
+<!--            android:textColor="@color/colorPrimary"-->
+<!--            android:text="@string/spaced_shield"/>-->
+
+        <ImageView
+            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
+            android:forceDarkAllowed="false"
+            android:layout_width="80sp"
+            android:layout_height="80sp"
+            android:tint="@color/colorPrimary"
+            android:src="@drawable/splash_from_nova_2"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:elevation="2dp" />
 
     </LinearLayout>
 
