--- a/Shield/app/src/main/res/menu/menu_main.xml
+++ b/Shield/app/src/main/res/menu/menu_main.xml
@@ -17,8 +17,9 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_logout"
+        android:id="@+id/action_clear_logs"
         android:orderInCategory="100"
-        android:title="@string/action_logout"
+        android:title="@string/action_clear_logs"
         app:showAsAction="never" />
+
 </menu>
