--- a/Shield/app/src/main/res/layout/fragment_friends.xml
+++ b/Shield/app/src/main/res/layout/fragment_friends.xml
@@ -80,7 +80,7 @@
             style="@style/MenuButtonsSmallBlue"/>
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/fabImage"
+            android:id="@+id/fabScanBarcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_baseline_qr_code_scanner_24"
