Complete `BleRecord` database

--- a/Shield/app/src/main/res/layout/fragment_alerts.xml
+++ b/Shield/app/src/main/res/layout/fragment_alerts.xml
@@ -29,8 +29,9 @@
                     android:id="@+id/recyclerViewNotifications"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:nestedScrollingEnabled="false"
+                    android:nestedScrollingEnabled="true"
                     tools:listitem="@layout/card_notification"
+                    android:visibility="visible"
                     rlv:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
             </RelativeLayout>
