--- a/Shield/app/src/main/res/menu/menu_main.xml
+++ b/Shield/app/src/main/res/menu/menu_main.xml
@@ -16,10 +16,17 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
     <item
         android:id="@+id/action_clear_logs"
         android:orderInCategory="100"
         android:title="@string/action_clear_logs"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_clear_database"
+        android:orderInCategory="100"
+        android:title="@string/action_clear_database"
         app:showAsAction="never" />
 
 </menu>
