--- a/Shield/app/src/main/res/layout/card_notification.xml
+++ b/Shield/app/src/main/res/layout/card_notification.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:rlv="http://schemas.android.com/apk/res-auto" xmlns:mcpapp="http://schemas.android.com/apk/com.l4digital.fastscroll" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:rlv="http://schemas.android.com/apk/res-auto"
+    xmlns:mcpapp="http://schemas.android.com/apk/com.l4digital.fastscroll"
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.Guideline
         android:orientation="vertical"
         android:id="@+id/guidelineV01"
