Fix notification UI `nightmode` issue

--- a/Shield/app/src/main/res/layout/card_notification.xml
+++ b/Shield/app/src/main/res/layout/card_notification.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="1dp"
-        android:foregroundTint="@color/colorPrimaryDark"
+        android:backgroundTint="@color/white"
         rlv:layout_constraintBottom_toBottomOf="parent"
         rlv:layout_constraintEnd_toStartOf="@+id/guidelineV01"
         rlv:layout_constraintStart_toStartOf="@+id/guidelineV02"
@@ -81,8 +81,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:text="@string/text_notification_0"
+                    android:text="@string/exposed_text"
                     android:layout_marginStart="20dp"
+                    android:paddingRight="10dp"
                     rlv:layout_constraintEnd_toEndOf="parent"
                     rlv:layout_constraintStart_toEndOf="@+id/imageViewIcon"
                     rlv:layout_constraintTop_toTopOf="parent"/>
@@ -113,6 +114,7 @@
                     android:text="@string/text_notification_1"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
+                    android:textColor="@color/cardview_dark_background"
                     rlv:layout_constraintEnd_toEndOf="parent"
                     rlv:layout_constraintStart_toStartOf="parent"
                     rlv:layout_constraintTop_toTopOf="parent"/>
@@ -127,6 +129,7 @@
                     android:text="@string/text_notification_2"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
+                    android:textColor="@color/cardview_dark_background"
                     rlv:layout_constraintEnd_toEndOf="parent"
                     rlv:layout_constraintStart_toStartOf="parent"
                     rlv:layout_constraintTop_toBottomOf="@+id/textViewMessage"/>
