--- a/Shield/app/src/main/res/menu/menu_main.xml
+++ b/Shield/app/src/main/res/menu/menu_main.xml
@@ -29,4 +29,10 @@
         android:title="@string/action_clear_database"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="@string/action_about"
+        app:showAsAction="never" />
+
 </menu>
